Fixed up broken styles on the website

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -6,7 +6,6 @@
     position: relative;
     color: #fff;
     height: 100%;
-    display: grid;
 }
 
 .home-page h1 {
